--- a/configuration/Areas/Bedroom/configuration.yaml
+++ b/configuration/Areas/Bedroom/configuration.yaml
@@ -1,317 +1,61 @@
 bedroom:
-  binary_sensor:
-    - platform: bayesian
-      name: Bedroom Occupancy
-      unique_id: bedroom_occupancy_bayesian
-      device_class: occupancy
-      prior: 0.1  # Initial assumption of occupancy probability (e.g., 10%)
-      probability_threshold: 0.5  # Threshold at which the room is considered occupied (e.g., 50%)
-      observations:
-        # Motion Sensor - high impact
-        - entity_id: binary_sensor.bedroom_motion
-          platform: state
-          to_state: 'on'
-          prob_given_true: 0.9  # High probability if motion is detected
-          prob_given_false: 0.1 # Low probability if no motion
-
-        # Door Contact Sensor - moderate impact
-        - entity_id: binary_sensor.bedroom_door_contact
-          platform: state
-          to_state: 'off'  # Door is closed
-          prob_given_true: 0.6  # Moderate probability room is occupied if door is closed
-          prob_given_false: 0.4 # Room might still be occupied if door is open, but less likely
-
-        # Manual Override - highest impact
-        - entity_id: input_boolean.bedroom_occupied_override
-          platform: state
-          to_state: 'on'
-          prob_given_true: 0.95  # Nearly certain if override is enabled
-          prob_given_false: 0.05 # Very low probability without override
-
-        # Illuminance Sensor - low impact (adds subtlety to the model)
-        - entity_id: sensor.bathroom_illuminance
-          platform: numeric_state
-          below: 100
-          prob_given_true: 0.4  # Low light could indicate occupancy
-          prob_given_false: 0.6 # If light is high, less likely but still possible
-
-        # Temperature Sensor - comfort range, low impact
-        - entity_id: sensor.bathroom_temperature
-          platform: numeric_state
-          above: 18
-          below: 25
-          prob_given_true: 0.5  # Comfortable temperature range adds confidence
-          prob_given_false: 0.5 # No strong inference if temperature is outside this range
-
-        # Humidity Sensor - comfort range, low impact
-        - entity_id: sensor.bathroom_humidity
-          platform: numeric_state
-          above: 30
-          below: 60
-          prob_given_true: 0.4  # Ideal humidity might indicate someone is there
-          prob_given_false: 0.6 # Less likely if humidity is outside the comfort range
   template:
-    - trigger:
-        - platform: state
-          entity_id:
-            - binary_sensor.bedroom_motion
-            - binary_sensor.bedroom_door_contact
-            - input_boolean.bedroom_occupied_override
-            - sensor.bedroom_illuminance
-            - sensor.bedroom_temperature
-            - sensor.bedroom_humidity
-      binary_sensor:
+    - binary_sensor:
         - name: Bedroom Occupancy
           unique_id: bedroom_occupancy
           device_class: occupancy
           delay_off:
             minutes: 2
-          state: |-
-            {% if states('binary_sensor.bedroom_motion') == 'unavailable' and states('binary_sensor.bedroom_door_contact') == 'unavailable' %}
-              false
-            {% else %}
+          variables:
+            motion: "binary_sensor.bedroom_motion"
+            tv: "binary_sensor.bedroom_tv_state"
+            door: "binary_sensor.bedroom_door_contact"
+            occupied_override: "input_boolean.bedroom_occupied_override"
+            illuminance: "sensor.bedroom_illuminance"
+            temperature: "sensor.bedroom_temperature"
+            humidity: "sensor.bedroom_humidity"
+          state: >
+            {% set confidence_score = state_attr('binary_sensor.bedroom_occupancy', 'confidence_score') | int(0) %}
+            {{ confidence_score >= 40 }}
+          attributes:
+            confidence_score: >
+              {# Define all scoring conditions in a list #}
+              {% set scoring_conditions = [
+                {'entity_id': motion, 'type': 'state', 'state': 'on', 'score': 40},
+                {'entity_id': tv, 'type': 'state', 'state': 'on', 'score': 40},
+                {'entity_id': door, 'type': 'state', 'state': 'off', 'score': 20},
+                {'entity_id': occupied_override, 'type': 'state', 'state': 'on', 'score': 50},
+                {'entity_id': illuminance, 'type': 'range', 'min': 0, 'max': 100, 'score': 10},
+                {'entity_id': temperature, 'type': 'range', 'min': 18, 'max': 25, 'score': 10},
+                {'entity_id': humidity, 'type': 'range', 'min': 30, 'max': 60, 'score': 10}
+              ] %}
+
+              {# Initialise the scores and active contributors #}
               {% set scores = namespace(total=0) %}
 
-              # Motion sensor - high weight
-              {% if is_state('binary_sensor.bedroom_motion', 'on') %}
-                {% set scores.total = scores.total + 40 %}
-              {% endif %}
-
-              # Door contact sensor - moderate weight
-              {% if is_state('binary_sensor.bedroom_door_contact', 'off') %}
-                {% set scores.total = scores.total + 20 %}
-              {% endif %}
-
-              # Manual override - highest weight
-              {% if is_state('input_boolean.bedroom_occupied_override', 'on') %}
-                {% set scores.total = scores.total + 50 %}
-              {% endif %}
-
-              # Illuminance sensor - low weight (indirect factor)
-              {% set illuminance = states('sensor.bedroom_illuminance') | float(0) %}
-              {% if illuminance < 100 %}
-                {% set scores.total = scores.total + 10 %}
-              {% endif %}
-
-              # Temperature sensor - low weight (comfortable temperature range)
-              {% set temperature = states('sensor.bedroom_temperature') | float(0) %}
-              {% if temperature > 18 and temperature < 25 %}
-                {% set scores.total = scores.total + 10 %}
-              {% endif %}
-
-              # Humidity sensor - low weight (comfortable range)
-              {% set humidity = states('sensor.bedroom_humidity') | float(0) %}
-              {% if humidity > 30 and humidity < 60 %}
-                {% set scores.total = scores.total + 10 %}
-              {% endif %}
-
-              {{ scores.total >= 50 }}
-            {% endif %}
-          attributes:
-            confidence_score: |-
-              {% set scores = namespace(total=0) %}
-
-              # Motion sensor
-              {% if is_state('binary_sensor.bedroom_motion', 'on') %}
-                {% set scores.total = scores.total + 40 %}
-              {% endif %}
-
-              # Door contact sensor
-              {% if is_state('binary_sensor.bedroom_door_contact', 'off') %}
-                {% set scores.total = scores.total + 20 %}
-              {% endif %}
-
-              # Manual override
-              {% if is_state('input_boolean.bedroom_occupied_override', 'on') %}
-                {% set scores.total = scores.total + 50 %}
-              {% endif %}
-
-              # Illuminance sensor
-              {% set illuminance = states('sensor.bedroom_illuminance') | float(0) %}
-              {% if illuminance < 100 %}
-                {% set scores.total = scores.total + 10 %}
-              {% endif %}
-
-              # Temperature sensor
-              {% set temperature = states('sensor.bedroom_temperature') | float(0) %}
-              {% if temperature > 18 and temperature < 25 %}
-                {% set scores.total = scores.total + 10 %}
-              {% endif %}
-
-              # Humidity sensor
-              {% set humidity = states('sensor.bedroom_humidity') | float(0) %}
-              {% if humidity > 30 and humidity < 60 %}
-                {% set scores.total = scores.total + 10 %}
-              {% endif %}
-
-              {{ scores.total }}
-
-            occupancy_percentage: |-
-              {% set scores = namespace(total=0) %}
-
-              # Motion sensor
-              {% if is_state('binary_sensor.bedroom_motion', 'on') %}
-                {% set scores.total = scores.total + 40 %}
-              {% endif %}
-
-              # Door contact sensor
-              {% if is_state('binary_sensor.bedroom_door_contact', 'off') %}
-                {% set scores.total = scores.total + 20 %}
-              {% endif %}
-
-              # Manual override
-              {% if is_state('input_boolean.bedroom_occupied_override', 'on') %}
-                {% set scores.total = scores.total + 50 %}
-              {% endif %}
-
-              # Illuminance sensor
-              {% set illuminance = states('sensor.bedroom_illuminance') | float(0) %}
-              {% if illuminance < 100 %}
-                {% set scores.total = scores.total + 10 %}
-              {% endif %}
-
-              # Temperature sensor
-              {% set temperature = states('sensor.bedroom_temperature') | float(0) %}
-              {% if temperature > 18 and temperature < 25 %}
-                {% set scores.total = scores.total + 10 %}
-              {% endif %}
-
-              # Humidity sensor
-              {% set humidity = states('sensor.bedroom_humidity') | float(0) %}
-              {% if humidity > 30 and humidity < 60 %}
-                {% set scores.total = scores.total + 10 %}
-              {% endif %}
-
-              {{ (scores.total / 100) * 100 | round(0) }} %
-
-            active_triggers: |-
-              {% set triggers = [] %}
-              {% if is_state('binary_sensor.bedroom_motion', 'on') %}
-                {% set triggers = triggers + ['Motion Detected'] %}
-              {% endif %}
-              {% if is_state('binary_sensor.bedroom_door_contact', 'off') %}
-                {% set triggers = triggers + ['Door Closed'] %}
-              {% endif %}
-              {% if is_state('input_boolean.bedroom_occupied_override', 'on') %}
-                {% set triggers = triggers + ['Manual Override'] %}
-              {% endif %}
-              {% set illuminance = states('sensor.bedroom_illuminance') | float(0) %}
-              {% if illuminance < 100 %}
-                {% set triggers = triggers + ['Low Illuminance'] %}
-              {% endif %}
-              {% set temperature = states('sensor.bedroom_temperature') | float(0) %}
-              {% if temperature > 18 and temperature < 25 %}
-                {% set triggers = triggers + ['Comfortable Temperature'] %}
-              {% endif %}
-              {% set humidity = states('sensor.bedroom_humidity') | float(0) %}
-              {% if humidity > 30 and humidity < 60 %}
-                {% set triggers = triggers + ['Comfortable Humidity'] %}
-              {% endif %}
-              {{ triggers|join(', ') }}
-    - binary_sensor:
-        - name: Bedroom Temperature Rising
-          unique_id: bedroom_temp_rising
-          state: |-
-            {% set current = states('sensor.bedroom_temperature')|float(20) %}
-            {% set previous = state_attr('sensor.bedroom_temperature', 'previous_value')|float(20) %}
-            {% set threshold = 0.2 %}
-            {{ (current - previous) > threshold }}
-        - name: Bedroom Temperature Falling
-          unique_id: bedroom_temp_falling
-          state: |-
-            {% set current = states('sensor.bedroom_temperature')|float(20) %}
-            {% set previous = state_attr('sensor.bedroom_temperature', 'previous_value')|float(20) %}
-            {% set threshold = 0.2 %}
-            {{ (current - previous) < threshold }}
-      sensor:
-        - name: Bedroom Temperature Differential
-          unique_id: bedroom_temp_differential
-          state: |-
-            {% set current = states('sensor.bedroom_temperature')|float(20) %}
-            {% set target = state_attr('climate.bedroom', 'temperature')|float(20) %}
-            {{ (current - target)|round(1) }}
-          attributes:
-            current_temp: >-
-              {{ states('sensor.bedroom_temperature')|float(20) }}
-            target_temp: >-
-              {{ state_attr('climate.bedroom', 'temperature')|float(20) }}
-            mode: >-
-              {{ state_attr('climate.bedroom', 'hvac_action')|default('off') }}
-    - binary_sensor:
-        - name: Bedroom High Humidity
-          unique_id: bedroom_high_humidity
-          state: |-
-            {% set current = states('sensor.bedroom_humidity')|float(50) %}
-            {{ current > 75 }}
-      sensor:
-        - name: Bedroom Humidity Change
-          unique_id: bedroom_humidity_change
-          state: |-
-            {% set current = states('sensor.bedroom_humidity')|float(50) %}
-            {% set average = states('sensor.sensor.bedroom_humidity_average')|float(50) %}
-            {{ ((current - average) / average * 100)|round(1) }}
-          attributes:
-            current_humidity: >-
-              {{ states('sensor.bedroom_humidity')|float(50) }}
-            average_humidity: >-
-              {{ states('sensor.sensor.bedroom_humidity_average')|float(50) }}
-    - binary_sensor:
-        - name: Bedroom Windows Open
-          unique_id: bedroom_windows_open
-          state: >-
-            {{ is_state('binary_sensor.bedroom_window', 'on') }}
-          attributes:
-            climate_impact: |-
-              {% set temp_diff = states('sensor.bedroom_temp_differential')|float(0) %}
-              {% set window_open = is_state('binary_sensor.bedroom_window', 'on') %}
-              {% if window_open %}
-                {% if temp_diff > 2 %}
-                  'heating_loss'
-                {% elif temp_diff < -2 %}
-                  'cooling_loss'
-                {% else %}
-                  'minimal'
+              {# Loop through each scoring condition #}
+              {% for condition in scoring_conditions %}
+                {% if condition.type == 'state' %}
+                  {# Check if the entity matches the expected state #}
+                  {% if is_state(condition.entity_id, condition.state) %}
+                    {% set scores.total = scores.total + condition.score %}
+                  {% endif %}
+                {% elif condition.type == 'range' %}
+                  {# Check if the entity value falls within the specified range #}
+                  {% set value = states(condition.entity_id) | float(0) %}
+                  {% if value >= condition.min and value <= condition.max %}
+                    {% set scores.total = scores.total + condition.score %}
+                  {% endif %}
                 {% endif %}
-              {% else %}
-                'none'
-              {% endif %}
-  input_number:
-    bedroom_temp_threshold:
-      name: Bedroom Temperature Threshold
-      min: 19.0
-      max: 25.0
-      step: 0.5
-      unit_of_measurement: °C
-      icon: mdi:thermometer
-      initial: 23.0
-    bedroom_light_brightness:
-      name: Bedroom Light Brightness
-      min: 0.0
-      max: 100.0
-      step: 5.0
-      unit_of_measurement: '%'
-      icon: mdi:brightness-6
-      initial: 100.0
-    bedroom_light_transition:
-      name: Bedroom Light Transition Time
-      min: 0.0
-      max: 10.0
-      step: 0.5
-      unit_of_measurement: s
-      icon: mdi:transition
-      initial: 5.0
-    bedroom_humidity_threshold:
-      name: Bedroom Humidity Threshold
-      min: 30.0
-      max: 80.0
-      step: 1.0
-      unit_of_measurement: '%'
-      icon: mdi:water-percent
-      initial: 60.0
+              {% endfor %}
+
+              {# Calculate the maximum score dynamically #}
+              {% set max_score = scoring_conditions | map(attribute='score') | sum %}
+              {# Calculate the percentage score, rounded to the nearest whole number #}
+              {% set percentage = (scores.total / max_score * 100) | round(0) %}
+              {# Output final percentage #}
+              {{ percentage }}
   input_boolean:
-    bedroom_light_color_mode:
-      name: Bedroom Light Color Mode
-      icon: mdi:palette
     bedroom_occupied_override:
       name: Bedroom Manual Occupancy Override
       icon: mdi:account-check
