--- a/configuration/Areas/Kitchen/configuration.yaml
+++ b/configuration/Areas/Kitchen/configuration.yaml
@@ -4,130 +4,56 @@ kitchen:
         - name: Kitchen Occupancy
           unique_id: kitchen_occupancy
           device_class: occupancy
-          state: |-
-            {% set scores = namespace(total=0) %}
-            {% if is_state('binary_sensor.kitchen_motion', 'on') %}  {% set scores.total = scores.total + 3 %}{% endif %}
-            {% if is_state('binary_sensor.kitchen_appliance_active', 'on') %}  {% set scores.total = scores.total + 2 %}{% endif %}
-            {% if is_state('input_boolean.kitchen_occupied_override', 'on') %}  {% set scores.total = scores.total + 5 %}{% endif %}
-            {{ scores.total >= 3 }}
+          delay_off:
+            minutes: 2
+          variables:
+            motion: "binary_sensor.kitchen_motion"
+            door: "binary_sensor.kitchen_door_contact"
+            occupied_override: "input_boolean.kitchen_occupied_override"
+            illuminance: "sensor.kitchen_illuminance"
+            temperature: "sensor.kitchen_temperature"
+            humidity: "sensor.kitchen_humidity"
+          state: >
+            {% set confidence_score = state_attr('binary_sensor.kitchen_occupancy', 'confidence_score') | int(0) %}
+            {{ confidence_score >= 40 }}
           attributes:
-            confidence_score: |-
+            confidence_score: >
+              {# Define all scoring conditions in a list #}
+              {% set scoring_conditions = [
+                {'entity_id': motion, 'type': 'state', 'state': 'on', 'score': 40},
+                {'entity_id': door, 'type': 'state', 'state': 'off', 'score': 20},
+                {'entity_id': occupied_override, 'type': 'state', 'state': 'on', 'score': 50},
+                {'entity_id': illuminance, 'type': 'range', 'min': 0, 'max': 100, 'score': 10},
+                {'entity_id': temperature, 'type': 'range', 'min': 18, 'max': 25, 'score': 10},
+                {'entity_id': humidity, 'type': 'range', 'min': 30, 'max': 60, 'score': 10}
+              ] %}
+
+              {# Initialise the scores and active contributors #}
               {% set scores = namespace(total=0) %}
-              {% if is_state('binary_sensor.kitchen_motion', 'on') %}  {% set scores.total = scores.total + 3 %}{% endif %}
-              {% if is_state('binary_sensor.kitchen_appliance_active', 'on') %}  {% set scores.total = scores.total + 2 %}{% endif %}
-              {% if is_state('input_boolean.kitchen_occupied_override', 'on') %}  {% set scores.total = scores.total + 5 %}{% endif %}
-              {{ scores.total }}
-            active_triggers: |-
-              {% set triggers = [] %}
-              {% if is_state('binary_sensor.kitchen_motion', 'on') %}  {% set triggers = triggers + ['Motion Detected'] %}{% endif %}
-              {% if is_state('binary_sensor.kitchen_appliance_active', 'on') %}  {% set triggers = triggers + ['Appliance Active'] %}{% endif %}
-              {% if is_state('input_boolean.kitchen_occupied_override', 'on') %}  {% set triggers = triggers + ['Manual Override'] %}{% endif %}
-              {{ triggers|join(', ') }}
-    - binary_sensor:
-        - name: Kitchen Active
-          unique_id: kitchen_active
-          state: >-
-            {{ states('sensor.kitchen_sockets_power')|float(0) > 200 }}
-          attributes:
-            power_draw: >-
-              {{ states('sensor.kitchen_sockets_power')|float(0) }}
-      sensor:
-        - name: Kitchen State
-          unique_id: kitchen_state
-          state: |-
-            {% set power = states('sensor.kitchen_sockets_power')|float(0) %}
-            {% if power > 200 %}
-              running
-            {% elif power > 100 %}
-              standby
-            {% else %}
-              off
-            {% endif %}
-    - binary_sensor:
-        - name: Kitchen Appliance Active
-          unique_id: kitchen_appliance_active
-          state: |-
-            {% set oven_power = states('sensor.oven_power')|float(0) %}
-            {% set kettle_power = states('sensor.kettle_current_power')|float(0) %}
-            {% set kitchen_sockets_power = states('sensor.kitchen_sockets_power')|float(0) %}
-            {{ oven_power > 50 or kitchen_sockets_power > 200 or kettle_power > 100 }}
-          attributes:
-            oven_power: >-
-              {{ states('sensor.oven_power')|float(0) }}
-            kettle_power: >-
-              {{ states('sensor.kettle_current_power')|float(0) }}
-            kitchen_sockets_power: >-
-              {{ states('sensor.kitchen_sockets_power')|float(0) }}
-      sensor:
-        - name: Kitchen Appliance Energy Consumption
-          unique_id: kitchen_energy_consumption
-          state: |-
-            {% set oven_power = states('sensor.oven_power')|float(0) %}
-            {% set kitchen_sockets_power = states('sensor.kitchen_sockets_power')|float(0) %}
-            {{ (oven_power + kitchen_sockets_power )|round(2) }}
-          attributes:
-            oven_state: >-
-              {{ states('sensor.oven_state') }}
-        - name: Kitchen Appliance Status
-          unique_id: kitchen_appliance_status
-          state: |-
-            {% set oven_state = states('sensor.oven_state') %}
-            {% set dishwasher_state = states('sensor.dishwasher_state') %}
-            {% if oven_state == 'on' and dishwasher_state == 'on' %}
-              high_activity
-            {% elif oven_state == 'on' or dishwasher_state == 'on' %}
-              moderate_activity
-            {% else %}
-              idle
-            {% endif %}
-  input_number:
-    kitchen_power_threshold:
-      name: Kitchen Power Alert Threshold
-      min: 100.0
-      max: 1000.0
-      step: 50.0
-      unit_of_measurement: W
-      icon: mdi:flash-alert
-      initial: 400.0
-    kitchen_light_brightness:
-      name: Kitchen Light Brightness
-      min: 0.0
-      max: 100.0
-      step: 5.0
-      unit_of_measurement: '%'
-      icon: mdi:brightness-6
-      initial: 100.0
-    kitchen_light_transition:
-      name: Kitchen Light Transition Time
-      min: 0.0
-      max: 10.0
-      step: 0.5
-      unit_of_measurement: s
-      icon: mdi:transition
-      initial: 5.0
-    kitchen_appliance_power_threshold:
-      name: Kitchen Appliance Power Threshold
-      min: 50.0
-      max: 2000.0
-      step: 50.0
-      unit_of_measurement: W
-      icon: mdi:flash-alert
-      initial: 200.0
-    kitchen_humidity_threshold:
-      name: Kitchen Humidity Threshold
-      min: 30.0
-      max: 80.0
-      step: 1.0
-      unit_of_measurement: '%'
-      icon: mdi:water-percent
-      initial: 60.0
+
+              {# Loop through each scoring condition #}
+              {% for condition in scoring_conditions %}
+                {% if condition.type == 'state' %}
+                  {# Check if the entity matches the expected state #}
+                  {% if is_state(condition.entity_id, condition.state) %}
+                    {% set scores.total = scores.total + condition.score %}
+                  {% endif %}
+                {% elif condition.type == 'range' %}
+                  {# Check if the entity value falls within the specified range #}
+                  {% set value = states(condition.entity_id) | float(0) %}
+                  {% if value >= condition.min and value <= condition.max %}
+                    {% set scores.total = scores.total + condition.score %}
+                  {% endif %}
+                {% endif %}
+              {% endfor %}
+
+              {# Calculate the maximum score dynamically #}
+              {% set max_score = scoring_conditions | map(attribute='score') | sum %}
+              {# Calculate the percentage score, rounded to the nearest whole number #}
+              {% set percentage = (scores.total / max_score * 100) | round(0) %}
+              {# Output final percentage #}
+              {{ percentage }}
   input_boolean:
-    kitchen_light_color_mode:
-      name: Kitchen Light Color Mode
-      icon: mdi:palette
-    kitchen_appliance_monitoring:
-      name: Kitchen Appliance Monitoring
-      icon: mdi:washing-machine
     kitchen_occupied_override:
       name: Kitchen Manual Occupancy Override
       icon: mdi:account-check
