--- a/esphome/esp-base-template.yaml
+++ b/esphome/esp-base-template.yaml
@@ -31,7 +31,7 @@ esp32_ble_tracker:
     active: true
   on_ble_advertise:
     - then:
-        - lambda: |-
+        - lambda: |
             ESP_LOGD("ble_adv", "New BLE device");
             ESP_LOGD("ble_adv", "  address: %s", x.address_str().c_str());
             ESP_LOGD("ble_adv", "  name: %s", x.get_name().c_str());
@@ -50,7 +50,7 @@ esp32_ble_tracker:
 
 bluetooth_proxy:
   active: true
-    
+
 button:
   - platform: restart
     name: ${area} Bed Presence Restart
