--- a/esphome/its-wednesday.yaml
+++ b/esphome/its-wednesday.yaml
@@ -5,7 +5,7 @@ esphome:
   on_boot:
     priority: 600
     then:
-      - lambda: |-
+      - lambda: |
           srand(id(sntp_time).now().timestamp);
 
 esp8266:
@@ -74,7 +74,7 @@ binary_sensor:
       - light.turn_on:
           id: led_light
           effect: strobe
-      - lambda: |-
+      - lambda: |
           // Define the list of songs
           const char *songs[] = {
             "star_wars:d=16,o=5,b=100:4e,4e,4e,8c,p,g,4e,8c,p,g,4e,4p,4b,4b,4b,8c6,p,g,4d#,8c,p,g,4e,8p",
@@ -102,7 +102,7 @@ time:
           - light.turn_on:
               id: led_light
               effect: strobe
-          - lambda: |-
+          - lambda: |
               // Define the list of songs
               const char *songs[] = {
                 "star_wars:d=16,o=5,b=100:4e,4e,4e,8c,p,g,4e,8c,p,g,4e,4p,4b,4b,4b,8c6,p,g,4d#,8c,p,g,4e,8p",
